--- a/Draw/Controller/Common/DiceRoomPasswordDialog.xib
+++ b/Draw/Controller/Common/DiceRoomPasswordDialog.xib
@@ -47,13 +47,12 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, -13}, {290, 215}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="146925368"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
 									<string key="NSClassName">NSImage</string>
-									<string key="NSResourceName">logout@2x.png</string>
+									<string key="NSResourceName">dice_help_bg@2x.png</string>
 								</object>
 							</object>
 							<object class="IBUIButton" id="244077518">
@@ -61,7 +60,6 @@
 								<int key="NSvFlags">283</int>
 								<string key="NSFrame">{{185, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -91,7 +89,6 @@
 								<int key="NSvFlags">286</int>
 								<string key="NSFrame">{{20, 142}, {84, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="244077518"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -109,7 +106,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{104, 48}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="445091174"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="826739735">
 									<int key="NSColorSpace">3</int>
@@ -151,7 +147,6 @@
 								<int key="NSvFlags">314</int>
 								<string key="NSFrame">{{104, 100}, {166, 31}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="755309997"/>
 								<reference key="IBUIBackgroundColor" ref="826739735"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -177,7 +172,6 @@
 								<int key="NSvFlags">306</int>
 								<string key="NSFrame">{{50, -2}, {190, 37}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="477338562"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -202,7 +196,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 48}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="973088010"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -236,7 +229,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 100}, {89, 32}}</string>
 								<reference key="NSSuperview" ref="961595998"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="914890163"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -259,7 +251,6 @@
 						</array>
 						<string key="NSFrame">{{15, 45}, {290, 235}}</string>
 						<reference key="NSSuperview" ref="908420203"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="141245721"/>
 						<reference key="IBUIBackgroundColor" ref="826739735"/>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -267,7 +258,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 460}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="961595998"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -465,14 +455,19 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="10.CustomClassName">FontButton</string>
 				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="11.CustomClassName">HKGirlFontLabel</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="12.CustomClassName">HKGirlFontLabel</string>
 				<string key="12.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.CustomClassName">RoomPasswordDialog</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="6.CustomClassName">FontButton</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="7.CustomClassName">FontButton</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="8.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="9.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -483,107 +478,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">24</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonInfoView</string>
-					<string key="superclassName">UIView</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">contentView</string>
-						<string key="NS.object.0">UIView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">contentView</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonInfoView.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">InputDialog</string>
-					<string key="superclassName">CommonInfoView</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clickCancelButton:">id</string>
-						<string key="clickOkButton:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clickCancelButton:">
-							<string key="name">clickCancelButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="clickOkButton:">
-							<string key="name">clickOkButton:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="bgView">UIImageView</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="okButton">UIButton</string>
-						<string key="targetTextField">UITextField</string>
-						<string key="titleLabel">UIButton</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="bgView">
-							<string key="name">bgView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="okButton">
-							<string key="name">okButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="targetTextField">
-							<string key="name">targetTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="titleLabel">
-							<string key="name">titleLabel</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/InputDialog.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">RoomPasswordDialog</string>
-					<string key="superclassName">InputDialog</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="passwordField">UITextField</string>
-						<string key="passwordLabel">UILabel</string>
-						<string key="roomNameLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="passwordField">
-							<string key="name">passwordField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="passwordLabel">
-							<string key="name">passwordLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="roomNameLabel">
-							<string key="name">roomNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/RoomPasswordDialog.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
@@ -593,8 +488,8 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="NS.key.0">logout@2x.png</string>
-			<string key="NS.object.0">{607, 514}</string>
+			<string key="NS.key.0">dice_help_bg@2x.png</string>
+			<string key="NS.object.0">{640, 960}</string>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
